--- a/RockTime_Store.html
+++ b/RockTime_Store.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Rocktime - Camisetas de Rock</title>
     <link rel="stylesheet" href="./CSS/style_rock.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
     <header>
@@ -229,5 +230,6 @@
     <footer>
       <p class="rodape">&copy; 2023 Rocktime. Todos os direitos reservados.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
